src/App.css
.mdc-checkbox .mdc-checkbox__native-control:checked ~ .mdc-checkbox__background::before,
.mdc-checkbox .mdc-checkbox__native-control:indeterminate ~ .mdc-checkbox__background::before {
  background-color: #2979ff;
  /* @alternate */
  background-color: var(--mdc-theme-primary, #2979ff);
}
.mdc-checkbox.mdc-checkbox--selected .mdc-checkbox__ripple::before, .mdc-checkbox.mdc-checkbox--selected .mdc-checkbox__ripple::after {
  background-color: #2979ff;
  /* @alternate */
  background-color: var(--mdc-theme-primary, #2979ff);
}

.mdc-checkbox.mdc-ripple-upgraded--background-focused.mdc-checkbox--selected .mdc-checkbox__ripple::before,
.mdc-checkbox.mdc-ripple-upgraded--background-focused.mdc-checkbox--selected .mdc-checkbox__ripple::after {
  background-color: #2979ff;
  /* @alternate */
  background-color: var(--mdc-theme-primary, #2979ff);
}

.mdc-checkbox__native-control:enabled:checked ~ .mdc-checkbox__background,
.mdc-checkbox__native-control:enabled:indeterminate ~ .mdc-checkbox__background {
  border-color: #2979ff;
  /* @alternate */
  border-color: var(--mdc-theme-primary, #2979ff);
  background-color: #2979ff;
  /* @alternate */
  background-color: var(--mdc-theme-primary, #2979ff);
}

.mdc-snackbar--leading {
  justify-content: flex-end;
}
.mdc-snackbar {
  right: 8px;
  bottom: 40px;
  left: 8px;
}
.mdc-snackbar__label, [dir=rtl] .mdc-snackbar__label {
  padding: 0;
}
.mdc-snackbar__surface, [dir=rtl] .mdc-snackbar__surface {
  padding: 0;
}
.mdc-snackbar__action:not(:disabled) {
    color: var(--mdc-theme-primary, #2979ff);;
}

.app-container {
  background-color: var(--mdc-theme-background);
  color: var(--mdc-theme-on-surface);
}

.glow-missing-icon {
  animation: glow 1s ease-in-out infinite alternate;
}

@keyframes glow {
  from {
    text-shadow: 0 0 10px #fff, 0 0 12px #fff, 0 0 14px #e60073, 0 0 18px #e60073, 0 0 20px #e60073;
  }
  to {
    text-shadow: 0 0 12px #fff, 0 0 14px #ff4da6, 0 0 16px #ff4da6, 0 0 18px #ff4da6, 0 0 20px #ff4da6, 0 0 22px #ff4da6;
  }
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input::placeholder {
    font-size: 14px;
    line-height: 2;
}

input:disabled {
  background-color: var(--mdc-theme-text-disabled-on-light);
  opacity: 0.7;
}

